# File-Converter

./: CMakeLists.txt  README.md  validator (1).cpp  validator.h
data/: sample.csv  sample.docx  sample.json  sample.xml
include/: audio_converter.h  converter.h  data_converter.h  detector.h  document_converter.h  history.h  image_converter.h  instructions.txt  utils.h  video_converter.h
src/: audio_converter.cpp  converter.cpp  data_converter.cpp  detector.cpp  document_converter.cpp  history.cpp  image_converter (1).cpp  main.cpp  utils.cpp  video_converter.cpp
